--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: Richard Kim
+name: Hi, I'm Richard Kim
 bio: I want to think and understand things clearly 
 
 # twitter summary info
@@ -65,7 +65,7 @@ width: large
 projects: false
 
 # if you don't need "about" or "blog", comment them out below
-about: true
+about: false
 blog: false
 
 # do you want to show the "read time" of the posts?
