--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: resume/resume.pdf
+resume-url: resume/master.pdf
 
 url: https://khgkim.github.io
 
