update favicon and resume

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: Hi, I'm Richard Kim
+name: Hi, I'm Richard
 bio: I want to think and understand things clearly 
 
 # twitter summary info
