--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: resume/master.pdf
+resume-url: https://resume.io/r/75XxdX5Cf
+# resume-url: resume/master.pdf
 
 url: https://khgkim.github.io
 
